--- a/Front-End-Web-UI-Frameworks-and–Tools-Bootstrap4/conFusion/css/styles.css
+++ b/Front-End-Web-UI-Frameworks-and–Tools-Bootstrap4/conFusion/css/styles.css
@@ -23,8 +23,17 @@
     color:floralwhite;
 }
 
-.address {
+address {
     font-size: 80%;
     margin:0px;
     color:#0f0f0f;
+}
+
+body {
+    padding: 50px 0px 0px 0px;
+    z-index: 0;
+}
+
+.navbar-dark {
+    background-color: #512da8
 }
