--- a/Front-End-Web-UI-Frameworks-and–Tools-Bootstrap4/conFusion/css/styles.css
+++ b/Front-End-Web-UI-Frameworks-and–Tools-Bootstrap4/conFusion/css/styles.css
@@ -54,3 +54,16 @@ body {
   position: absolute;
   bottom: 0px;
 }
+.modal .modal-header {
+  background: #512DA8;
+  color: floralwhite; 
+}
+.modal .modal-header button {
+    color: floralwhite; 
+}
+.modal .modal-body {
+  background: #D1C4E9; 
+}
+.modal .modal-footer {
+  background: #9575CD; 
+}
