--- a/Front-End-Web-UI-Frameworks-and–Tools-Bootstrap4/conFusion/css/styles.scss
+++ b/Front-End-Web-UI-Frameworks-and–Tools-Bootstrap4/conFusion/css/styles.scss
@@ -72,3 +72,19 @@ body{
     position: absolute;
     bottom: 0px;
 }
+
+.modal{
+    .modal-header{
+        background: $background-dark;
+        color: floralwhite;
+        button{
+            color: floralwhite;
+        }
+    }
+    .modal-body{
+        background: $background-fade;
+    }
+    .modal-footer{
+        background: $background-light;
+    }
+}
